--- a/oz-wep/index.html
+++ b/oz-wep/index.html
@@ -10,6 +10,6 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <h1>oz 파이팅</h1>
-    <button>로그인</button>
+    <button type="submit">로그인</button>
   </body>
 </html>
